--- a/munia_io/templates/base.html
+++ b/munia_io/templates/base.html
@@ -1,56 +1,32 @@
-{% load staticfiles %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title %}MUNIA.io{% endblock %}</title>
+	<meta charset="utf-8"/>
+	<meta name="description" content="Webpage for the MUNIA series of devices allowing gamepad display on your pc."/>
+	<meta name="viewport" content="width=device-width"/>
 
-    {% block stylesheets %}
-        <link href="{% static "css/bootstrap.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/socicon.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/iconsmind.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/interface-icons.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/owl.carousel.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/lightbox.min.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/theme.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href="{% static "css/custom.css" %}" rel="stylesheet" type="text/css" media="all" />
-        <link href='https://fonts.googleapis.com/css?family=Lora:400,400italic,700%7CMontserrat:400,700' rel='stylesheet' type='text/css'>
-   {% endblock %}
+	<link rel="apple-touch-icon-precomposed" href="{% static "img/favicon.ico" %}"/>
+	<link rel="icon" href="{% static "img/favicon.ico" %}"/>
+	<link rel="mask-icon" href="{% static "img/favicon.svg" %}" color="rgb(36,38,58)"/>
+	<link rel="shortcut icon" href="{% static "img/favicon.ico" %}"/>
 
-    <title>{% block title %}MUNIA.io{% endblock %}</title>
-
+	{% block stylesheets %}
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="{% static "css/main.css" %}"/>
+	{% endblock %}
+	{% block extrastylesheets %} {% endblock %}
 </head>
-
-<body class="scroll-assist">
-    <div class="loader"></div>
-
-    {% block navbar %} 	{% include "navbar.html" %} {% endblock %}
-	<div class="main-container">
-    {% block content %} {% endblock %}
-    {% block footer %} 	{% include "footer.html" %} {% endblock %}
-    </div>
-
-    {% block scripts %}
-    <script src="{% static "js/jquery-2.1.4.min.js" %}"></script>
-    <script src="{% static "js/isotope.min.js" %}"></script>
-    <script src="{% static "js/ytplayer.min.js" %}"></script>
-    <script src="{% static "js/easypiechart.min.js" %}"></script>
-    <script src="{% static "js/owl.carousel.min.js" %}"></script>
-    <script src="{% static "js/lightbox.min.js" %}"></script>
-    <script src="{% static "js/twitterfetcher.min.js" %}"></script>
-    <script src="{% static "js/smooth-scroll.min.js" %}"></script>
-    <script src="{% static "js/scrollreveal.min.js" %}"></script>
-    <script src="{% static "js/parallax.js" %}"></script>
-    <script src="{% static "js/scripts.js" %}"></script>
-    {% endblock %}
-
+<body class="page page-home preload">
+{% block header %}    {% include "header.html" %} {% endblock %}
+{% block content %} {% endblock %}
+{% block footer %}    {% include "footer.html" %} {% endblock %}
+{% block scripts %}
+	<script src="{% static "js/jquery.min.js" %}"></script>
+	<script src="{% static "js/main.js" %}"></script>
+{% endblock %}
+{% block extrascripts %} {% endblock %}
 </body>
 </html>
-
-
-
