--- a/munia_io/templates/footer.html
+++ b/munia_io/templates/footer.html
@@ -1,25 +1,46 @@
 {% load staticfiles %}
-<footer class="footer-3 bg--white text-center-xs">
-    <div class="col-sm-3">
-        <img alt="logo" class="logo" src="{% static "img/logo-dark.png" %}">
-        <span>+31 6 1392 1576</span>
-        <a href="#" class="type--underline">
-            contact@munia.io
-        </a>
+<footer class="footer-main bg-image-hero dark overlay-shape-04">
+    <div class="margin-top center max-width-m">
+        <h3>MUNIA - High quality gamepad input adapters</h3>
+        <p></p>
     </div>
-    <div class="col-sm-6 text-center">
-        <ul class="footer__navigation">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+    <div class="center max-width-l">
+        <div class="row margin-bottom min-two-columns">
+            <div class="col-one-fourth">
+                <i class="feature-icons material-icons bg-gradient-pink">call_split</i>
+                <h6>Plug and play hardware</h6>
+            </div>
+            <div class="col-one-fourth">
+                <i class="feature-icons material-icons bg-gradient-cyan">edit</i>
+                <h6>Fully customizable software</h6>
+            </div>
+            <div class="col-one-fourth">
+                <i class="feature-icons material-icons bg-gradient-green">aspect_ratio</i>
+                <h6>Perfectly scaling skins</h6>
+            </div>
+            <div class="col-one-fourth">
+                <i class="feature-icons material-icons bg-gradient-indigo">usb</i>
+                <h6>Driverless USB</h6>
+            </div>
+        </div>
     </div>
-    <div class="col-sm-3 text-right text-center-xs">
-        <ul class="social-list">
-            <li><a href="#"><i class="socicon-twitter"></i></a></li>
-            <li><a href="#"><i class="socicon-mail"></i></a></li>
-        </ul>
-        <span class="type--fine-print">© Copyright
-            <span class="update-year">2017</span> MUNIA.io all rights reserved</span>
+
+    <div class="row center-desktop max-width-l">
+        <div class="col-one-fifth"></div>
+        <div class="col-one-fifths">
+            <h6>MUNIA.io ®</h6>
+            <p>MUNIA is a hobby project of Frank Razenberg.</p>
+        </div>
+
+        <div class="col-one-fifth right">
+			<a id="connect" name="#connect"></a>
+	            <h6>Connect</h6>
+            <ul class="blank">
+	            <li><a href="mailto:frank at munia dot io"><i class="fa fa-envelope"></i> Email</a></li>
+                <li><a href="http://twitter.com/zzattack"><i class="fa fa-twitter"></i> Twitter</a></li>
+	            <li><a href="http://twitch.tv/zzattack"><i class="fa fa-twitch"></i> Twitch.tv</a></li>
+            </ul>
+        </div>
     </div>
+    <p class="copyright"><span>Copyright </span><a href="http://munia.io/" target="_blank">MUNIA.io</a><span> - © 2016-2018, all rights reserved.</span></p>
 </footer>
