--- a/munia_io/templates/footer.html
+++ b/munia_io/templates/footer.html
@@ -36,7 +36,7 @@
 			<a id="connect" name="#connect"></a>
 	            <h6>Connect</h6>
             <ul class="blank">
-	            <li><a href="mailto:frank at munia dot io"><i class="fa fa-envelope"></i> Email</a></li>
+	            <li><a href="mailto:&#102;&#114;&#097;&#110;&#107;&#064;&#122;&#122;&#097;&#116;&#116;&#097;&#099;&#107;&#046;&#111;&#114;&#103;"><i class="fa fa-envelope"></i> Email</a></li>
                 <li><a href="http://twitter.com/zzattack"><i class="fa fa-twitter"></i> Twitter</a></li>
 	            <li><a href="http://twitch.tv/zzattack"><i class="fa fa-twitch"></i> Twitch.tv</a></li>
             </ul>
