--- a/munia_io/home/templates/home/index.html
+++ b/munia_io/home/templates/home/index.html
@@ -8,7 +8,7 @@
 				<div class="row max-width-l">
 					<div class="col-one-half middle">
 						<div>
-							<h1 class="hero">MUNIA.io</h1>
+							<h1 class="hero">MUNIA</h1>
 							<p class="lead">Devices for capturing gamepad inputs for displaying on screen or stream.
 							</p>
 							<p>All designs, firmware and software are open source.</p>
