--- a/munia_io/home/templates/home/devices.html
+++ b/munia_io/home/templates/home/devices.html
@@ -27,9 +27,8 @@
 							<li>Use gamepads with emulators in PC mode</li>
 							<li>Built-in LCD for configuration</li>
 						</ul>
-						<object data="{% static "img/content/munia_device.svg" %}" type="image/svg+xml">
-							<img src="{% static "img/content/munia_device.jpg" %}"/>
-						</object>
+
+						<img src="{% static "img/content/munia_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
 						<a href="#munia" class="button button-secondary full-width space-top" role="button">More info</a>
@@ -50,9 +49,7 @@
 							<li>Ability to use controller on PC with emulators</li>
 						</ul>
 
-						<object data="{% static "img/content/munia_device.svg" %}" type="image/svg+xml">
-							<img src="{% static "img/content/munia_device.jpg" %}"/>
-						</object>
+						<img src="{% static "img/content/musia_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
 						<a href="#musia" class="button button-secondary full-width space-top" role="button">More info</a>
@@ -74,9 +71,7 @@
 							<li>Ability to use controller on PC with emulators</li>
 						</ul>
 
-						<object data="{% static "img/content/munia_device.svg" %}" type="image/svg+xml">
-							<img src="{% static "img/content/munia_device.jpg" %}"/>
-						</object>
+						<img src="{% static "img/content/munia-n64_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
 						<a style="vertical-align: bottom;" href="#musia" class="button button-secondary full-width" role="button">More info</a>
