add success page

--- a/munia_io/home/templates/home/devices.html
+++ b/munia_io/home/templates/home/devices.html
@@ -31,7 +31,29 @@
 						<img src="{% static "img/content/munia_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
-						<a href="#munia" class="button button-secondary full-width space-top" role="button">More info</a>
+
+						<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+						  <!-- Identify your business so that you can collect the payments. -->
+						  <input type="hidden" name="business" value="herschelgomez@xyzzyu.com">
+
+						  <!-- Specify a Buy Now button. -->
+						  <input type="hidden" name="cmd" value="_xclick">
+
+						  <!-- Specify details about the item that buyers will purchase. -->
+						  <input type="hidden" name="item_name" value="Hot Sauce-12oz. Bottle">
+						  <input type="hidden" name="amount" value="5.95">
+						  <input type="hidden" name="currency_code" value="USD">
+
+						  <!-- Display the payment button. -->
+						  <input type="image" name="submit" border="0"
+						  src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif"
+						  alt="Buy Now">
+						  <img alt="" border="0" width="1" height="1"
+						  src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+
+						</form>
+												<a href="#munia" class="button button-secondary full-width space-top" role="button">Buy now</a>
+
 					</div>
 
 					<div class="col-one-third card card-content dark flex-column">
@@ -52,7 +74,9 @@
 						<img src="{% static "img/content/musia_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
-						<a href="#musia" class="button button-secondary full-width space-top" role="button">More info</a>
+
+						<a href="#musia" class="button button-secondary full-width space-top" role="button">Buy now</a>
+
 					</div>
 
 
