--- a/munia_io/home/templates/home/devices.html
+++ b/munia_io/home/templates/home/devices.html
@@ -14,9 +14,8 @@
 					<div class="col-one-third card card-content dark flex-column">
 						<h2>MUNIA</h2>
 						<p>The original, for NGC, N64 and SNES</p>
-						<h3>
-							<span class="pricing-price">€70</span>
-						</h3>
+						<h3 class="pricing-price">€70 <span class="xsmall">excl. shipping</span></h3>
+
 						<p class="paragraph">Powerful input display for 3 iconic Nintendo systems</p>
 						<ul class="space-bottom">
 							<li>Plug-and-play input viewer</li>
@@ -32,36 +31,20 @@
 
 						<div style="flex-grow: 1;"></div>
 
-						<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-						  <!-- Identify your business so that you can collect the payments. -->
-						  <input type="hidden" name="business" value="herschelgomez@xyzzyu.com">
-
-						  <!-- Specify a Buy Now button. -->
-						  <input type="hidden" name="cmd" value="_xclick">
-
-						  <!-- Specify details about the item that buyers will purchase. -->
-						  <input type="hidden" name="item_name" value="Hot Sauce-12oz. Bottle">
-						  <input type="hidden" name="amount" value="5.95">
-						  <input type="hidden" name="currency_code" value="USD">
-
-						  <!-- Display the payment button. -->
-						  <input type="image" name="submit" border="0"
-						  src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif"
-						  alt="Buy Now">
-						  <img alt="" border="0" width="1" height="1"
-						  src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
-
+						<form class="button button-secondary full-width space-top" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="JG5E3SB5LDSUE">
+							<input type="image" src="https://munia.io/static/img/content/buynow.png" name="submit" alt="PayPal - The safer, easier way to pay online!"
+							       style="border: 0px; height: 39px; vertical-align: middle;">
 						</form>
-												<a href="#munia" class="button button-secondary full-width space-top" role="button">Buy now</a>
 
 					</div>
 
 					<div class="col-one-third card card-content dark flex-column">
 						<h2>MUSIA</h2>
 						<p>World's first PS2 input display</p>
-						<h3>
-							<span class="pricing-price">€55</span>
-						</h3>
+						<h3 class="pricing-price">€55 <span class="xsmall">excl. shipping</span></h3>
+
 
 						<p class="paragraph">The first and only device capable of showing PS2 inputs on stream</p>
 						<ul class="space-bottom">
@@ -75,17 +58,19 @@
 
 						<div style="flex-grow: 1;"></div>
 
-						<a href="#musia" class="button button-secondary full-width space-top" role="button">Buy now</a>
-
+						<form class="button button-secondary full-width space-top" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="FWUCLPCNBYUGE">
+							<input type="image" src="https://munia.io/static/img/content/buynow.png" name="submit" alt="PayPal - The safer, easier way to pay online!"
+							       style="border: 0px; height: 39px; vertical-align: middle;">
+						</form>
 					</div>
 
 
 					<div class="col-one-third card card-content dark flex-column">
 						<h2>MUNIA-N64</h2>
 						<p>Nintendo 64 input display/switch</p>
-						<h3>
-							<span class="pricing-price">€40</span>
-						</h3>
+						<h3 class="pricing-price">€40 <span class="xsmall">excl. shipping</span></h3>
 
 						<p class="paragraph">Input display, controller adapter and built-in switch</p>
 						<ul class="space-bottom">
@@ -98,11 +83,19 @@
 						<img src="{% static "img/content/munia-n64_device.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
-						<a style="vertical-align: bottom;" href="#musia" class="button button-secondary full-width" role="button">More info</a>
+
+						<form class="button button-secondary full-width space-top" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+							<input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="VD3DX79LXDU98">
+							<input type="image" src="https://munia.io/static/img/content/buynow.png" name="submit" alt="PayPal - The safer, easier way to pay online!"
+							       style="border: 0px; height: 39px; vertical-align: middle;">
+						</form>
+
 					</div>
 
 				</div>
 			</div>
+			<div class="padding"></div>
 		</section>
 	</main>
 
