align footer text

--- a/munia_io/templates/footer.html
+++ b/munia_io/templates/footer.html
@@ -32,7 +32,7 @@
             <p>MUNIA is a hobby project of Frank Razenberg.</p>
         </div>
 
-        <div class="col-one-fifth right">
+        <div class="col-one-fifth right space-right">
 			<a id="connect" name="#connect"></a>
 	            <h6>Connect</h6>
             <ul class="blank">
