--- a/munia_io/templates/header.html
+++ b/munia_io/templates/header.html
@@ -11,7 +11,7 @@
 			<li><a href="faq.html">FAQ</a></li>
 		</ul>
 		<ul class="inline right">
-			<li><a href="#connect">Contact</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
 </header>
