--- a/munia_io/home/templates/home/contact.html
+++ b/munia_io/home/templates/home/contact.html
@@ -1,8 +1,35 @@
-{%  extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
+	<main>
+		<section class="bg-image-hero center-tablet dark overlay-shape-03 full-screen">
+			<div class="-margin-bottom padding padding-top-tablet ">
 
-	contact form
+				<div class="col-one-half middle padding">
+					<div class="max-width-m bg-gradient-consoles padding rounded">
+						<h5>MUNIA.io contact form!</h5>
 
+						<form action="contact.html" method="post" target="_top">
+                            {% csrf_token %}
+							<div class="form-group">
+								<label for="name">Name:</label>
+								<input id="name" type="text" name="name" value="Anonymous"/>
+							</div>
+							<div class="form-group">
+								<label for="email">Email:</label>
+								<input id="email" type="email" name="email" required>
+							</div>
+							<div class="form-group">
+								<label for="password">Message:</label>
+								<textarea name="message" required="" placeholder="I have a question regarding the MUNIA product"></textarea>
+							</div>
+							<button class="button button-primary full-width space-top" role="button" name="submit">Submit</button>
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</section>
+	</main>
 
 {% endblock %}
