--- a/munia_io/home/templates/home/index.html
+++ b/munia_io/home/templates/home/index.html
@@ -12,8 +12,8 @@
 							<p class="lead">Devices for capturing gamepad inputs for displaying on screen or stream.
 							</p>
 							<p>All designs, firmware and software are open source.</p>
-							<a href="http://github.com/zzattack/munia" class="button button-primary space-top" role="button">Github
-								project</a>
+							<a href="http://github.com/zzattack/munia" class="button button-primary space-top" role="button">Github project</a>
+							<a href="/devices.html" class="button button-primary space" role="button">Buy a device</a>
 						</div>
 					</div>
 					<div class="col-one-half middle">
