--- a/munia_io/templates/header.html
+++ b/munia_io/templates/header.html
@@ -8,6 +8,7 @@
 		<ul class="inline">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="devices.html">Devices</a></li>
+			<li><a href="software.html">Software</a></li>
 			<li><a href="faq.html">FAQ</a></li>
 		</ul>
 		<ul class="inline right">
