use optional padding for sections

--- a/munia_io/home/templates/home/software.html
+++ b/munia_io/home/templates/home/software.html
@@ -82,34 +82,34 @@
 				</div>
 			</div>
 
-			<div class="margin-top space-left dark max-width-l bg-gradient-sienna">
+			<div class="margin-top padding-opt dark max-width-l bg-gradient-sienna">
 				<h2>Skin theming engine</h2>
 				<p class="paragraph">The built-in theming engine will allow you to recolor existing themes without
 					any need for XML or SVG knowledge.</p>
-				<img class="space" src="{% static "img/content/remap_engine.png" %}" alt="Skin color remapping engine">
+				<img src="{% static "img/content/remap_engine.png" %}" alt="Skin color remapping engine">
 			</div>
 
-			<div class="margin-top space-left dark max-width-l bg-gradient-olive">
+			<div class="margin-top padding-opt dark max-width-l bg-gradient-olive">
 				<h2>Capture card lag compensation</h2>
 				<p class="paragraph">Many capture cards have a delay between capturing and displaying the
 					video stream. This is very noticable when inputs are being shown in the same picture, so the MUNIA
 					software is able to seemlessly delay the shown inputs to match the capture lag.</p>
-				<img class="space" src="{% static "img/content/lag_compensation.png" %}" alt="Lag compensation window">
+				<img src="{% static "img/content/lag_compensation.png" %}" alt="Lag compensation window">
 			</div>
 
-			<div class="margin-top space-left max-width-l bg-gradient-violet">
+			<div class="margin-top padding-opt max-width-l bg-gradient-violet">
 				<h2>Firmware updating</h2>
 				<p class="paragraph">All devices we sell are eligible for firmware updates.</p>
-				<img class="space" src="{% static "img/content/bootloader.png" %}" alt="Bootloader window">
+				<img src="{% static "img/content/bootloader.png" %}" alt="Bootloader window">
 			</div>
 
-			<div class="margin-top margin-bottom space-left dark max-width-l bg-gradient-cyan">
+			<div class="margin-top padding-opt margin-bottom dark max-width-l bg-gradient-cyan">
 				<h2>NintendoSpy compatibility</h2>
 				<p class="paragraph">Although fundamentally different, the MUNIA software can be configured to process
 					data form NintendoSpy input displays as well. These devices are arduino-based and show up on your system
 					as a Serial COM port. The MUNIA software allows these to be mapped onto Gamecube, N64 or SNES controllers.
 					All you need to do is specify the correct mapping in the <em>Arduino mappings</em> menu.</p>
-				<img class="space" src="{% static "img/content/arduino_mapper.png" %}" alt="Arduino mapper window">
+				<img src="{% static "img/content/arduino_mapper.png" %}" alt="Arduino mapper window">
 			</div>
 
 		</section>
